# real-time-transcription-using-google-speech-to-text-built-with-fastapi-and-next

./: .codeiumignore  README.md
.github/workflows/: server-run-formatter.yaml  server-run-linter.yaml  server-run-test.yaml
docs/: README.md  communication-flow.md  transcription-flow.md
frontend/: package.json
frontend/public/src/worklets/: recorderWorkletProcessor.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/features/transcription/components/Transcription/: index.tsx
frontend/src/features/transcription/components/TranscriptionContainer.tsx/: index.tsx
frontend/src/features/transcription/components/TranscriptionView/: index.tsx
frontend/src/features/transcription/components/container/: TranscriptionContainer.tsx
frontend/src/features/transcription/components/presentation/: TranscriptionView.tsx
frontend/src/features/transcription/hooks/: useTranscription.ts
frontend/src/features/transcription/hooks/useTranscription/: index.ts
frontend/src/features/transcription/utils/: getMediaStream.ts
server/: .gitignore  README.md  docker-compose.yaml
server/.github/: pull_request_template.md
server/.github/workflows/: run-test.yaml
server/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/api/src/: db.py  main.py
server/api/src/settings/: cors.py  env.py
server/api/src/websocket/: transcription.py
server/api/test/: test_main.py
